[package]
name = "hexo-blog-admin"
version = "1.0.0"
description = "hexo-blog-admin"
authors = ["xkloveme"]
license = ""
repository = ""
default-run = "hexo-blog-admin"
edition = "2018"
build = "src/build.rs"

[profile.release.package.wry]
debug = true
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "http-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
